Refactor lifecycle and resolve static analysis warnings
- Integrate ShutdownOrchestrator into plugin shutdown flow and remove duplicated shutdown logic.

- Replace deprecated plugin description access with PluginMeta usage for Paper 1.21.11 compatibility.

- Improve update checker reliability by simplifying repository encoding and HTTP headers.

- Fix targeting eligibility/scoring warnings, including null-safe attribute access and inverted boolean call sites.

- Clean up GUI and language manager warnings (locale-safe case conversion, non-null inventory holder, Unicode literals, and mkdirs result handling).

- Simplify environment aggression settings by removing dead code and redundant parameters, and using Math.clamp where appropriate.